# ParticleEffects

./: CMakeLists.txt  Readme.md
lib/: glfw.lib
resources/: ak47_magazine.json
resources/Nokobot/ModernGuns/Models/Assault Rifles/: AK47.FBX
resources/Nokobot/ModernGuns/Models/Other Weapons/Magazines/: UmpMag.FBX
resources/Nokobot/ModernGuns/Models/Sniper Rifles/Magazines/: L96Mag.FBX
shaders/: Basic.vert  EnvMap.frag  GunFireParticle.frag  GunFireParticle.geom  IrradianceConvolution.frag  PBR.frag  PBR.vert  Particle.vert
src/: AssimpUtilities.cpp  AssimpUtilities.hpp  BasicShapes.cpp  BasicShapes.h  Camera.h  EnvironmentMap.cpp  EnvironmentMap.h  GL_Constants.h  GameObject.h  ParticleEffects.cpp  ParticleEmitter.cpp  ParticleEmitter.h  Scene.cpp  Scene.h  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h
src/imgui/: imgui_impl_glfw_gl3.cpp
